syntax = "proto3";

package user;

service User {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetSession (GetSessionRequest) returns (GetSessionResponse) {}
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  int32 age = 5;
  string role = 6;
  
  message Location {
    string city = 1;
    string country = 2;
  }

  Location location = 7;
}

message CreateUserResponse {
  string status = 1;
  string message = 2;
  string token = 3;

  message Field {
    string name = 1;
    string validation = 2;
  }

  repeated Field fields = 4;
}

message GetSessionRequest {
  string email = 1;
  string password = 2;
  string role = 3;
}

message GetSessionResponse {
  string status = 1;
  string message = 2;
  string token = 3;

  message Field {
    string name = 1;
    string validation = 2;
  }

  repeated Field fields = 4;
}
